--- a/pdf-node/package.json
+++ b/pdf-node/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --watch 'src/' --exec \"ts-node src/app.js\" -e ts"
+    "start": "nodemon --watch 'src/' --exec \"ts-node src/app.ts\" -e ts",
+    "build": "tsc"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
