--- a/pdf-node/package.json
+++ b/pdf-node/package.json
@@ -10,16 +10,20 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "moment-timezone": "^0.5.43",
     "nodemon": "^3.0.1",
     "puppeteer": "^21.5.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
     "@types/express-serve-static-core": "^4.17.41",
+    "@types/moment-timezone": "^0.5.30",
     "@types/node": "^20.10.0",
     "@types/puppeteer": "^7.0.4",
+    "@types/winston": "^2.4.4",
     "typescript": "^5.3.2"
   }
 }
